--- a/resources/views/exports/pdf.html
+++ b/resources/views/exports/pdf.html
@@ -97,168 +97,174 @@
             .signatures {
                 margin-top: 20px;
                 display: flex;
-                justify-content: space-between;
+                justify-content: space-between; /* Align items evenly across the row */
+                align-items: center; /* Vertically align both items */
             }
+
             .signatures div {
                 text-align: center;
-                width: 45%;
+                width: 45%; /* Ensures equal width for both signature sections */
             }
+
             .signature-line {
                 border-top: 1px solid #000;
-                margin-top: 40px;
+                margin-top: 10px;
+                width: 80%; /* Keeps the line at a reasonable width */
+                margin-left: auto;
+                margin-right: auto; /* Center the signature line */
             }
         </style>
     </head>
     <body>
         <div class="pdf-wrapper">
-
-        <div class="header">
-            <img
-                src="https://buksu.edu.ph/wp-content/uploads/2020/05/buksu-logo-min-1024x1024.png"
-                alt="BukSU Logo"
-            />
-            <div class="header-text">
-                <h1>Bukidnon State University</h1>
-                <p>Malaybalay City, Bukidnon 6700</p>
-                <p>Tel: (088) 813-5661 to 5663, Telefax: (088) 813-2717</p>
-                <p>www.buksu.edu.ph</p>
+            <div class="header">
+                <img
+                    src="https://buksu.edu.ph/wp-content/uploads/2020/05/buksu-logo-min-1024x1024.png"
+                    alt="BukSU Logo"
+                />
+                <div class="header-text">
+                    <h1>Bukidnon State University</h1>
+                    <p>Malaybalay City, Bukidnon 6700</p>
+                    <p>Tel: (088) 813-5661 to 5663, Telefax: (088) 813-2717</p>
+                    <p>www.buksu.edu.ph</p>
+                </div>
             </div>
-        </div>
-        <div class="sub-header">
-            <h1>ATTENDANCE RECORD</h1>
-        </div>
-        <div class="info-box">
-            <table>
-                <tr>
-                    <td><strong>Name:</strong> MARK IAN M. MUKARA</td>
-                    <td><strong>Position:</strong> Instructor</td>
-                </tr>
-                <tr>
-                    <td>
-                        <strong>College:</strong> College of Technologies -
-                        Information Technologies
-                    </td>
-                    <td><strong>Month:</strong> July 2024</td>
-                </tr>
-            </table>
-        </div>
-
-        <div class="schedule">
-            <strong>SCHEDULE:</strong> English Section A(T123) 2024 M-F
-            08:00 AM - 12:00 PM : 01:00 PM - 05:00 PM
-        </div>
-        <table class="dtr-table">
-            <thead>
-                <tr>
-                    <th>Date</th>
-                    <th>Time In</th>
-                    <th>Time Out</th>
-                    <th>Status</th>
-                    <th>Percentage</th>
-                    <th>Remarks</th>
-                </tr>
-            </thead>
-            <tbody>
-                <!-- Example rows -->
-                <tr>
-                    <td>MON - 07/01/2024</td>
-                    <td>08:00 AM</td>
-                    <td>12:00 PM</td>
-                    <td>Present</td>
-                    <td>100%</td>
-                    <td></td>
-                </tr>
-                <tr>
-                    <td>TUE - 07/01/2024</td>
-                    <td>08:00 AM</td>
-                    <td>12:00 PM</td>
-                    <td>Present</td>
-                    <td>100%</td>
-                    <td></td>
-                </tr>
-                <tr>
-                    <td>THU - 07/01/2024</td>
-                    <td>08:00 AM</td>
-                    <td>12:00 PM</td>
-                    <td>Present</td>
-                    <td>100%</td>
-                    <td></td>
-                </tr>
-                <tr>
-                    <td>FRI - 07/01/2024</td>
-                    <td>08:00 AM</td>
-                    <td>12:00 PM</td>
-                    <td>Present</td>
-                    <td>100%</td>
-                    <td></td>
-                </tr>
-            </tbody>
-        </table>
-
-        <div class="schedule">
-            <strong>SCHEDULE:</strong> Science Section A(T123) 2024 M-F
-            08:00 AM - 12:00 PM : 01:00 PM - 05:00 PM
-        </div>
-        <table class="dtr-table">
-            <thead>
-                <tr>
-                    <th>Date</th>
-                    <th>Time In</th>
-                    <th>Time Out</th>
-                    <th>Status</th>
-                    <th>Percentage</th>
-                    <th>Remarks</th>
-                </tr>
-            </thead>
-            <tbody>
-                <!-- Example rows -->
-                <tr>
-                    <td>MON - 07/01/2024</td>
-                    <td>08:00 AM</td>
-                    <td>12:00 PM</td>
-                    <td>Present</td>
-                    <td>100%</td>
-                    <td>Marked as late. Arrived 18 minutes late but attended 142 minutes out of 150
-                        minutes.
+            <div class="sub-header">
+                <h1>ATTENDANCE RECORD</h1>
+            </div>
+            <div class="info-box">
+                <table>
+                    <tr>
+                        <td><strong>Name:</strong> MARK IAN M. MUKARA</td>
+                        <td><strong>Position:</strong> Instructor</td>
+                    </tr>
+                    <tr>
+                        <td>
+                            <strong>College:</strong> College of Technologies -
+                            Information Technologies
                         </td>
-                </tr>
-                <tr>
-                    <td>TUE - 07/01/2024</td>
-                    <td>08:00 AM</td>
-                    <td>12:00 PM</td>
-                    <td>Present</td>
-                    <td>100%</td>
-                    <td></td>
-                </tr>
-                <tr>
-                    <td>THU - 07/01/2024</td>
-                    <td>08:00 AM</td>
-                    <td>12:00 PM</td>
-                    <td>Present</td>
-                    <td>100%</td>
-                    <td></td>
-                </tr>
-                <tr>
-                    <td>FRI - 07/01/2024</td>
-                    <td>08:00 AM</td>
-                    <td>12:00 PM</td>
-                    <td>Present</td>
-                    <td>100%</td>
-                    <td></td>
-                </tr>
-            </tbody>
-        </table>
-
-        <div class="signatures">
-            <div>
-                <p>Signature</p>
-                <div class="signature-line"></div>
+                        <td><strong>Month:</strong> July 2024</td>
+                    </tr>
+                </table>
             </div>
-            <div>
-                <p>Dean/Director/Head of Office</p>
-                <div class="signature-line"></div>
+
+            <div class="schedule">
+                <strong>SCHEDULE:</strong> English Section A(T123) 2024 M-F
+                08:00 AM - 12:00 PM : 01:00 PM - 05:00 PM
+            </div>
+            <table class="dtr-table">
+                <thead>
+                    <tr>
+                        <th>Date</th>
+                        <th>Time In</th>
+                        <th>Time Out</th>
+                        <th>Status</th>
+                        <th>Percentage</th>
+                        <th>Remarks</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <!-- Example rows -->
+                    <tr>
+                        <td>MON - 07/01/2024</td>
+                        <td>08:00 AM</td>
+                        <td>12:00 PM</td>
+                        <td>Present</td>
+                        <td>100%</td>
+                        <td></td>
+                    </tr>
+                    <tr>
+                        <td>TUE - 07/01/2024</td>
+                        <td>08:00 AM</td>
+                        <td>12:00 PM</td>
+                        <td>Present</td>
+                        <td>100%</td>
+                        <td></td>
+                    </tr>
+                    <tr>
+                        <td>THU - 07/01/2024</td>
+                        <td>08:00 AM</td>
+                        <td>12:00 PM</td>
+                        <td>Present</td>
+                        <td>100%</td>
+                        <td></td>
+                    </tr>
+                    <tr>
+                        <td>FRI - 07/01/2024</td>
+                        <td>08:00 AM</td>
+                        <td>12:00 PM</td>
+                        <td>Present</td>
+                        <td>100%</td>
+                        <td></td>
+                    </tr>
+                </tbody>
+            </table>
+
+            <div class="schedule">
+                <strong>SCHEDULE:</strong> Science Section A(T123) 2024 M-F
+                08:00 AM - 12:00 PM : 01:00 PM - 05:00 PM
+            </div>
+            <table class="dtr-table">
+                <thead>
+                    <tr>
+                        <th>Date</th>
+                        <th>Time In</th>
+                        <th>Time Out</th>
+                        <th>Status</th>
+                        <th>Percentage</th>
+                        <th>Remarks</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <!-- Example rows -->
+                    <tr>
+                        <td>MON - 07/01/2024</td>
+                        <td>08:00 AM</td>
+                        <td>12:00 PM</td>
+                        <td>Present</td>
+                        <td>100%</td>
+                        <td>
+                            Marked as late. Arrived 18 minutes late but attended
+                            142 minutes out of 150 minutes.
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>TUE - 07/01/2024</td>
+                        <td>08:00 AM</td>
+                        <td>12:00 PM</td>
+                        <td>Present</td>
+                        <td>100%</td>
+                        <td></td>
+                    </tr>
+                    <tr>
+                        <td>THU - 07/01/2024</td>
+                        <td>08:00 AM</td>
+                        <td>12:00 PM</td>
+                        <td>Present</td>
+                        <td>100%</td>
+                        <td></td>
+                    </tr>
+                    <tr>
+                        <td>FRI - 07/01/2024</td>
+                        <td>08:00 AM</td>
+                        <td>12:00 PM</td>
+                        <td>Present</td>
+                        <td>100%</td>
+                        <td></td>
+                    </tr>
+                </tbody>
+            </table>
+
+            <div class="signatures">
+                <div>
+                    <p>Signature</p>
+                    <div class="signature-line"></div>
+                </div>
+                <div>
+                    <p>Dean/Director/Head of Office</p>
+                    <div class="signature-line"></div>
+                </div>
             </div>
         </div>
-    </div>
     </body>
 </html>
